# ck2launcher

./: CMakeLists.txt  LICENSE  README.md
extras/: ck2launcher-9999.ebuild
include/: configmanager.hpp  dlc.hpp  dlcs.hpp  iohelpers.hpp  ioutils.hpp  mod.hpp  mods.hpp  singleton.hpp
include/gui/: configuration.hpp  launcher.hpp
resources/: resources.qrc
src/: configmanager.cpp  dlc.cpp  dlcs.cpp  iohelpers.cpp  ioutils.cpp  main.cpp  mod.cpp  mods.cpp
src/gui/: configuration.cpp  launcher.cpp
ui/: configuration.ui  launcher.ui
